# agent

./: .env.template  .gitignore  Dockerfile  Dockerfile.cloudrun  README.md  TODO.PHASED.md  astro.config.mjs  audit.after2.clean.json  audit.after2.json  audit.current.json  audit.json  cloudrun.generate_preview.response.json  docker-compose.adk.yml  docker-compose.prod.yml  docker-compose.yml  firebase-token.txt.template  firebase.json  package-lock.json  package.json  pyproject.toml  repo-token.txt  repo-token.txt.template  requirements-dev.txt  response.json  tmp.cloudrun.describe.json  tmp.generate_preview.cloudrun.json  tmp.generate_preview.no_plan.json  tmp.request.json
.firebase/: hosting.ZGlzdA.cache
.github/: copilot-instructions.md
.github/workflows/: deploy-cloudrun.yml  pr.yml
.secrets/: README.md  sitegen-agent-key.json  sitegen-agent-key.json.template
adk/: README.md  package-lock.json  package.json
adk/src/: generate-page-plan.mjs  page-plan-output-schema.mjs
archived-docs-ignore/: TODO.md
content/: README.schema-warnings.md  page_plan.json  page_plan.schema.json  page_plan_pharmacy.json  page_plan_trainer.json
docs/: CI_CD_CLOUD_RUN.md  CLOUD_RUN_DEPLOY.md  PAGE_PLAN_CONTRACT.md  PHASE_5_CLOUD_RUN.md  REPO_SPLIT_PLAN.md  SALES_UI_PLAN.md  SECTION_LIBRARY.md
scripts/: deploy-preview.mjs  setup-repo-token-secret.ps1  validate-page-plan-core.mjs  validate-page-plan.mjs
sitegen_agent/: __init__.py  models.py  pipeline.py  server.py
sitegen_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_pipeline.py
(+21 files in other folders)
